--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "vendor/JetBrainsMono"]
 	path = vendor/JetBrainsMono
 	url = https://github.com/JetBrains/JetBrainsMono.git
+	shallow = true
