--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1786,6 +1786,9 @@ include gruvbox_dark_hard.conf
 
 # map kitty_mod+up    scroll_line_up
 # map kitty_mod+k     scroll_line_up
+map ctrl+alt+p    combine : scroll_line_up : scroll_line_up : scroll_line_up : scroll_line_up : scroll_line_up
+map ctrl+alt+n    combine : scroll_line_down : scroll_line_down : scroll_line_down : scroll_line_down : scroll_line_down
+
 # map opt+cmd+page_up scroll_line_up
 # map cmd+up          scroll_line_up
 
