--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -682,7 +682,7 @@ font_size 13.0
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell false
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
