Rose Pine for Alacritty

--- a/alacritty/dot-config/alacritty/alacritty.toml
+++ b/alacritty/dot-config/alacritty/alacritty.toml
@@ -1,3 +1,5 @@
+import = ["~/.config/alacritty/theme/rose-pine-moon.toml"]
+
 [font]
 normal = { family = "M+CodeLat60 Nerd Font Mono", style = "regular"}
 size = 12.5
