--- a/hypr/dot-config/hypr/hyprland.conf
+++ b/hypr/dot-config/hypr/hyprland.conf
@@ -27,7 +27,7 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = alacritty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = rofi -show drun -show-icons
 
 
 #################
@@ -39,7 +39,7 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+# exec-once = waybar & hyprpaper &
 exec-once = dunst
 exec-once = /usr/libexec/kf6/polkit-kde-authentication-agent-1
 
@@ -62,7 +62,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
     gaps_in = 10
-    gaps_out = 10
+    gaps_out = 20
 
     border_size = 2
 
@@ -77,6 +77,12 @@ general {
     allow_tearing = false
 
     layout = master
+
+}
+
+master {
+    new_is_master = false
+    no_gaps_when_only = 1
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -84,10 +90,10 @@ decoration {
     # rounding = 0
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 0.85
-    inactive_opacity = 0.95
+    active_opacity = 1.0
+    inactive_opacity = 1.0
 
-    drop_shadow = true
+    drop_shadow = false
     shadow_range = 2
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
@@ -124,14 +130,9 @@ dwindle {
     preserve_split = true # You probably want this
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-master {
-    new_is_master = true
-}
-
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 2 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
@@ -180,11 +181,11 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod SHIFT, space, layoutmsg,swapwithmaster master
-bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod SHIFT, C, killactive,
+bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
 #bind = $mainMod, V, togglefloating,
-bind = $mainMod, space, exec, $menu
+bind = $mainMod, p, exec, $menu
 #bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, space, togglesplit, # dwindle
 bind = $mainMod, f, fullscreen
