--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "zsh/zsh/dot-config/zsh/powerlevel10k"]
 	path = zsh/dot-config/zsh/powerlevel10k/powerlevel10k
 	url = git@github.com:romkatv/powerlevel10k.git
+[submodule "tmux/dot-config/tmux/plugins/tpm"]
+	path = tmux/dot-config/tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm
