--- a/picom/dot-config/picom/picom.conf
+++ b/picom/dot-config/picom/picom.conf
@@ -153,10 +153,10 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #
 # opacity-rule = []
 opacity-rule = [
-     "95:class_g = 'kitty' && focused",
-     "85:class_g = 'kitty' && !focused",
-     "95:class_g = 'Emacs' && focused",
-     "85:class_g = 'Emacs' && !focused"
+     "97:class_g = 'Alacritty' && focused",
+     "85:class_g = 'Alacritty' && !focused",
+     "97:class_g = 'Emacs-gtk+x11' && focused",
+     "85:class_g = 'Emacs-gtk+x11' && !focused"
 ];
 
 #################################
