--- a/kitty/dot-config/kitty/kitty.conf
+++ b/kitty/dot-config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Victor Mono
+font_family        M+1Code Nerd Font
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -1072,7 +1072,7 @@ window_margin_width 2
 #: of the neighboring tab.
 
 #: }}}
-include gruvbox_dark_hard.conf
+include themes/rose-pine-moon.conf
 #: Color scheme {{{
 
 # foreground #dddddd
